# ccd_2d

./: CMakeLists.txt  README.md  main.cpp  manipulator.cpp  manipulator.h  widget.cpp  widget.h
